splunk/pf-forwarder.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunkforwarder
  labels:
    app: splunkforwarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunkforwarder
  template:
    metadata:
      labels:
        app: splunkforwarder
    spec:
      containers:
       - name: splunk-uf
         image: splunk/universalforwarder:latest
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: pingfederate-logs
           mountPath: /var/log/pingfederate
        #  - name: pingaccess-logs
        #    mountPath: /var/log/pingaccess
         - name: confs
           mountPath: /opt/splunkforwarder/etc/system/local
      volumes:
      - name: pingfederate-logs
        persistentVolumeClaim:
          claimName: logs-dir-sg-fedex-pingfederate-engine-0
      # - name: pingaccess-logs
      #   persistentVolumeClaim:
      #     claimName: logs-dir-sg-fedex-pingaccess-engine-0
      - name: confs
        emptyDir: {}
      - name: splunk-config
        configMap:
          name: splunk-config
          defaultMode: 0777
